remove div that wraps outlet component to fix the content placement in home page

--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -1,10 +1,12 @@
 
 
 .main-body {
-flex: 1;
-display: flex;
-flex-direction: column;
-text-align: center;
+  /* height: 100%; */
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
 }
 
 .intro-container {
